# furl-ai-exercise

./: .gitignore  README.md  check_shapes.py  pyproject.toml
src/furl_ai_exercise/: __init__.py  models.py  service.py
tests/: scenario_data.py  test_firefox_windows10_pinned.py  test_firefox_windows11.py  test_firefox_windows7_esr.py
